# Whacky

./: .gitignore  CMakeLists.txt  README.md  test.wy
docs/: grammar.md
include/: ArenaAllocator.hpp  Generator.hpp  OperationGenerator.hpp  Parser.hpp  Tokenizer.hpp  TypeChecker.hpp
runtime/: runtime.c
src/: arenaAllocator.cpp  generator.cpp  main.cpp  operationGenerator.cpp  parser.cpp  tokenizer.cpp  typeChecker.cpp
